tests/baselines/reference/moduleAsBaseType.errors.txt
tests/cases/compiler/moduleAsBaseType.ts(2,17): error TS2708: Cannot use namespace 'M' as a value here because it has no value export.
tests/cases/compiler/moduleAsBaseType.ts(3,21): error TS2708: Cannot use namespace 'M' as a value here because it has no value export.
tests/cases/compiler/moduleAsBaseType.ts(4,21): error TS2708: Cannot use namespace 'M' as a value here because it has no value export.


==== tests/cases/compiler/moduleAsBaseType.ts (3 errors) ====
    module M {}
    class C extends M {}
                    ~
!!! error TS2708: Cannot use namespace 'M' as a value here because it has no value export.
    interface I extends M { }
                        ~
!!! error TS2708: Cannot use namespace 'M' as a value here because it has no value export.
    class C2 implements M { }
                        ~
!!! error TS2708: Cannot use namespace 'M' as a value here because it has no value export.